# api-biblioteca

./: README.md  pyproject.toml
app/: config.py  database.py  logging_config.py  main.py  models.py
app/config/: config.py  database.py  logging_config.py
app/crud/: __init__.py  autores_crud.py  base.py  editoras_crud.py  emprestimos_crud.py  livros_crud.py  usuarios_crud.py
app/database/: biblioteca.db
app/domain/: models.py
app/migrations/: env.py
app/migrations/versions/: 81614e32790a_.py  a32b47bea20b_migrate_banco.py  e59fb10af1e9_migrate_banco_postgres.py
app/routers/: autores.py  editoras.py  emprestimos.py  livros.py  usuarios.py
